chore(JVM26): Set up instrumentation for package private classes
Signed-off-by: l-1squared <30831153+l-1squared@users.noreply.github.com>